--- a/panel/src/app/extension/listextension/listextension.component.html
+++ b/panel/src/app/extension/listextension/listextension.component.html
@@ -13,13 +13,13 @@
             <mat-table #table [dataSource]="dataSource" matSort>
                 
                 <ng-container matColumnDef="username">
-                  <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>User Name </mat-header-cell>
                   <mat-cell *matCellDef="let element"> {{element.username}} </mat-cell>
                 </ng-container>
    
-                <ng-container matColumnDef="password">
-                  <mat-header-cell *matHeaderCellDef> Password </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.password}} </mat-cell>
+                <ng-container matColumnDef="secret">
+                  <mat-header-cell *matHeaderCellDef> Secret </mat-header-cell>
+                  <mat-cell *matCellDef="let element"> {{element.secret}} </mat-cell>
                 </ng-container>
   
                 <ng-container matColumnDef="callerid">
@@ -36,6 +36,12 @@
                   <mat-header-cell *matHeaderCellDef> Host </mat-header-cell>
                   <mat-cell *matCellDef="let element"> {{element.host}} </mat-cell>
                 </ng-container>
+
+                <ng-container matColumnDef="status">
+                    <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
+                  </ng-container>
+
   
                   <ng-container matColumnDef="actions">
                   <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
