--- a/panel/src/app/did/add-did/add-did.component.html
+++ b/panel/src/app/did/add-did/add-did.component.html
@@ -4,7 +4,7 @@
       <mat-card>
           <mat-card-content>
               <!-- Message Form -->
-              <mat-card-title>Add Queue</mat-card-title>
+              <mat-card-title>Add DID</mat-card-title>
               <form class="basic-form" (ngSubmit)="onSubmit()"  #AddDIDForm="ngForm">
               <div fxLayout="row" fxLayoutWrap="wrap">
                   <div fxFlex.gt-md="100" fxFlex="100">
