--- a/panel/src/app/leads/uploadleads/uploadleads.component.html
+++ b/panel/src/app/leads/uploadleads/uploadleads.component.html
@@ -1,3 +1,28 @@
-<p>
-  uploadleads works!
-</p>
+<div fxLayout="row" fxLayoutWrap="wrap">
+  <div fxFlex.gt-sm="100" fxFlex="100">
+      <mat-card>
+          <mat-card-content>
+              <mat-card-title>Upload Leads</mat-card-title>
+             
+              <form class="basic-form" (ngSubmit)="onSubmit()" #UploadForm="ngForm">
+              <div fxLayout="row" fxLayoutWrap="wrap">
+                
+                  <div fxFlex.gt-md="100" fxFlex="100">
+                    <mat-form-field>
+                      <input matInput placeholder="Enter File Name" [(ngModel)]="cdata.filename" name="filename">
+                    </mat-form-field>
+                  </div>
+                  <div fxFlex.gt-md="100" fxFlex="100">
+                    <mat-form-field>
+                      <input matInput  placeholder="Enter Campaign ID" [(ngModel)]="cdata.id_campaign" name="id_campaign" >
+                    </mat-form-field>
+                  </div>
+                   <div fxFlex.gt-sm="100" fxFlex="100">
+                      <button mat-raised-button color="primary" type="submit">Submit</button>
+                    </div> 
+                </div>
+              </form>      
+          </mat-card-content>
+      </mat-card>
+  </div>
+</div>
