--- a/panel/src/app/user/adduser/adduser.component.html
+++ b/panel/src/app/user/adduser/adduser.component.html
@@ -19,7 +19,7 @@
                   </div>
                   <div fxFlex.gt-sm="100" fxFlex="100">
                     <mat-form-field>
-                      <input matInput placeholder="Enter Company NAME" [(ngModel)]="cdata.company"  id="company" name="company">
+                      <input matInput placeholder="Enter Company Name" [(ngModel)]="cdata.company"  id="company" name="company">
                     </mat-form-field>
                   </div>
                   <div fxFlex.gt-sm="100" fxFlex="100">
