--- a/panel/src/app/campaign/listcampaign/listcampaign.component.html
+++ b/panel/src/app/campaign/listcampaign/listcampaign.component.html
@@ -65,7 +65,8 @@
                   <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                   <mat-cell *matCellDef="let row">
                       <!--<action [label]="'Edit'" [icon]="'fas fa-pencil-alt fa-fw'" [data]=row (onClick)="EditDetail()"></action>-->
-                      <button mat-raised-button color="primary" (click)="EditDetail(row)">Edit</button>
+                      <button mat-raised-button color="primary" (click)="Edit(row)">Edit</button>
+                      <button mat-raised-button color="primary" (click)="Delete(row)">Delete</button>
                   </mat-cell>
                 </ng-container> 
 
