--- a/panel/src/app/did/list-did/list-did.component.html
+++ b/panel/src/app/did/list-did/list-did.component.html
@@ -22,28 +22,15 @@
                   <mat-cell *matCellDef="let element"> {{element.idsupplier}} </mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="areacode">
-                    <mat-header-cell *matHeaderCellDef> Area Code </mat-header-cell>
-                    <mat-cell *matCellDef="let element"> {{element.areacode}} </mat-cell>
-                  </ng-container>
-
-                  <ng-container matColumnDef="did_rate">
-                      <mat-header-cell *matHeaderCellDef> ID_Supplier </mat-header-cell>
-                      <mat-cell *matCellDef="let element"> {{element.did_rate}} </mat-cell>
-                    </ng-container>
-
-                    <ng-container matColumnDef="setup_cost">
-                        <mat-header-cell *matHeaderCellDef> Set_Up_Cost </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.setup_cost}} </mat-cell>
-                    </ng-container>
+               
   
               
   
                   <ng-container matColumnDef="actions">
                   <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                   <mat-cell *matCellDef="let row">
-                     
-                      <button mat-raised-button color="primary" (click)="DeleteDetail(row)">Delete</button>
+                      <button mat-raised-button color="primary" (click)="Edit(row)">Edit</button>
+                      <button mat-raised-button color="primary" (click)="Delete(row)">Delete</button>
                   </mat-cell>
                 </ng-container> 
   
