--- a/panel/src/app/leads/listleads/listleads.component.html
+++ b/panel/src/app/leads/listleads/listleads.component.html
@@ -62,6 +62,15 @@
                   <mat-cell *matCellDef="let element"> {{element.duration}} </mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="actions">
+                    <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+                    <mat-cell *matCellDef="let row">
+                        <!--<action [label]="'Edit'" [icon]="'fas fa-pencil-alt fa-fw'" [data]=row (onClick)="EditDetail()"></action>-->
+                        <button mat-raised-button color="primary" (click)="Edit(row)">Edit</button>
+                        <button mat-raised-button color="primary" (click)="Delete(row)">Delete</button>
+                    </mat-cell>
+                  </ng-container> 
+
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
           </mat-table>
