complete all component

--- a/panel/src/app/campaign/addcampaign/addcampaign.component.html
+++ b/panel/src/app/campaign/addcampaign/addcampaign.component.html
@@ -6,7 +6,7 @@
               <!-- ============================================================== -->
               <!-- column -->
               <!-- ============================================================== -->
-              <form class="basic-form" (ngSubmit)="onSubmit()" #EditCampaignForm="ngForm">
+              <form class="basic-form" (ngSubmit)="onSubmit()" #AddCampaignForm="ngForm">
               <div fxLayout="row" fxLayoutWrap="wrap">
                   <!-- column -->
                   <div fxFlex.gt-md="100" fxFlex="100">
