--- a/panel/src/app/did/add-did/add-did.component.html
+++ b/panel/src/app/did/add-did/add-did.component.html
@@ -9,12 +9,12 @@
               <div fxLayout="row" fxLayoutWrap="wrap">
                   <div fxFlex.gt-md="100" fxFlex="100">
                     <mat-form-field>
-                      <input matInput placeholder="Enter Name" [(ngModel)]="cdata.number"   name="number">
+                      <input matInput placeholder="Enter DID Number" [(ngModel)]="cdata.number" type="number"  name="number">
                     </mat-form-field>
                   </div>
                   <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Enter Strategy" [(ngModel)]="cdata.supplier"   name="supplier">
+                        <input matInput placeholder="Enter ID Supplier" [(ngModel)]="cdata.supplier" type="number"   name="supplier">
                       </mat-form-field>
                   </div>
                   
