--- a/panel/src/app/queue/editqueue/editqueue.component.html
+++ b/panel/src/app/queue/editqueue/editqueue.component.html
@@ -19,22 +19,22 @@
                         </div>
                         <div fxFlex.gt-sm="100" fxFlex="100">
                           <mat-form-field>
-                            <input matInput placeholder="Enter Length" [(ngModel)]="cdata.maxlen"  id="maxlen" name="maxlen">
+                            <input matInput placeholder="Enter Length" [(ngModel)]="cdata.maxlen" type="number" id="maxlen" name="maxlen">
                           </mat-form-field>
                         </div>
                         <div fxFlex.gt-md="100" fxFlex="100">
                           <mat-form-field>
-                            <input matInput placeholder="Enter Retry number" [(ngModel)]="cdata.retry" id="retry"  name="retry">
+                            <input matInput placeholder="Enter Retry number" [(ngModel)]="cdata.retry" id="retry" type="number"  name="retry">
                           </mat-form-field>
                         </div>
                         <div fxFlex.gt-md="100" fxFlex="100">
                           <mat-form-field>
-                            <input matInput placeholder="Enter Wrap_Up_Time" [(ngModel)]="cdata.wrapuptime" id="wrapuptime"  name="wrapuptime">
+                            <input matInput placeholder="Enter Wrap_Up_Time" [(ngModel)]="cdata.wrapuptime" id="wrapuptime" type="number"  name="wrapuptime">
                           </mat-form-field>
                         </div>
                         <div fxFlex.gt-md="100" fxFlex="100">
                           <mat-form-field>
-                            <input matInput placeholder="Enter Announce_frequency" [(ngModel)]="cdata.announce_frequency" id="announce_frequency"  name="recordingformat">
+                            <input matInput placeholder="Enter Announce_frequency" [(ngModel)]="cdata.announce_frequency" type="number" id="announce_frequency"  name="recordingformat">
                           </mat-form-field>
                         </div>
                         
@@ -50,7 +50,7 @@
                         </div>
                         <div fxFlex.gt-md="100" fxFlex="100">
                           <mat-form-field>
-                            <input matInput placeholder="Enter Length" [(ngModel)]="cdata.maxlength" id="maxlength"  name="maxlength">
+                            <input matInput placeholder="Enter Length" [(ngModel)]="cdata.maxlength" id="maxlength" type="number"  name="maxlength">
                           </mat-form-field>
                         </div>
                         <div fxFlex.gt-sm="100" fxFlex="100">
