--- a/panel/src/app/extension/editextension/editextension.component.html
+++ b/panel/src/app/extension/editextension/editextension.component.html
@@ -19,7 +19,7 @@
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Enter Caller ID" [(ngModel)]="cdata.callerid"  id="callerid" name="callerid">
+                        <input matInput placeholder="Enter Caller ID" [(ngModel)]="cdata.callerid" type="number"  id="callerid" name="callerid">
                       </mat-form-field>
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
