--- a/panel/src/app/message/addmessage/addmessage.component.html
+++ b/panel/src/app/message/addmessage/addmessage.component.html
@@ -14,8 +14,7 @@
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
                         <mat-form-field>
-                               
-                            <input matInput type="text" placeholder="Choose a file" [(ngModel)]="cdata.filename" name="filename">
+                            <input matInput type="file" placeholder="Choose a file" [(ngModel)]="cdata.filename" name="filename">
                         </mat-form-field>
                     </div>
                     
