--- a/panel/src/app/shared/data-table/data-table.component.html
+++ b/panel/src/app/shared/data-table/data-table.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-12">
   <div class="card mb-3">
       <div class="card-header">{{label}}</div>
-      <div><input type="text" [(ngModel)]="search"></div>
+      <div><input type="text" [(ngModel)]="searchtext"></div>
       <div class="card-body table-responsive">
           <table class="table">
               <thead>
@@ -10,7 +10,7 @@
               </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let rdata of (data | Search:search);  let i = index">
+                <tr *ngFor="let rdata of (data | Search:searchtext);  let i = index">
                     <td scope="row">{{ i+1 }}</td>
 		            <td *ngFor="let cdata of (rdata | keys:field) ">{{ cdata.value }}</td>
                 </tr>
