fix it minor bugs

--- a/panel/src/app/leads/uploadleads/uploadleads.component.html
+++ b/panel/src/app/leads/uploadleads/uploadleads.component.html
@@ -14,7 +14,7 @@
                   </div>
                   <div fxFlex.gt-md="100" fxFlex="100">
                     <mat-form-field>
-                      <input matInput  placeholder="Enter Campaign ID" [(ngModel)]="cdata.id_campaign" name="id_campaign" >
+                      <input matInput  placeholder="Enter Campaign ID" [(ngModel)]="cdata.id_campaign" type="number" name="id_campaign" >
                     </mat-form-field>
                   </div>
                    <div fxFlex.gt-sm="100" fxFlex="100">
