--- a/panel/src/app/queue/editqueue/editqueue.component.html
+++ b/panel/src/app/queue/editqueue/editqueue.component.html
@@ -50,7 +50,7 @@
                         </div>
                         <div fxFlex.gt-md="100" fxFlex="100">
                           <mat-form-field>
-                            <input matInput placeholder="Enter Length" [(ngModel)]="cdata.maxlength" id="maxlength" type="number"  name="maxlength">
+                            <input matInput placeholder="Enter Length" [(ngModel)]="cdata.maxlen" id="maxlen" type="number"  name="maxlen">
                           </mat-form-field>
                         </div>
                         <div fxFlex.gt-sm="100" fxFlex="100">
