--- a/panel/src/app/did/upload-did/upload-did.component.html
+++ b/panel/src/app/did/upload-did/upload-did.component.html
@@ -14,7 +14,7 @@
                   </div>
                   <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field>
-                            <input matInput placeholder="Enter Supplier Name" [(ngModel)]="cdata.supplier" id="supplier" type="number" name="supplier">
+                            <input matInput placeholder="Enter Supplier Name" [(ngModel)]="cdata.idsupplier" id="idsupplier" type="number" name="idsupplier">
                       </mat-form-field>
                   </div>
                   
