--- a/panel/src/app/supplier/listsupplier/listsupplier.component.html
+++ b/panel/src/app/supplier/listsupplier/listsupplier.component.html
@@ -27,6 +27,12 @@
                 <mat-cell *matCellDef="let element"> {{element.prefix}} </mat-cell>
               </ng-container>
 
+              <ng-container matColumnDef="description">
+                <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
+              </ng-container>
+              
+
               <ng-container matColumnDef="actions">
                   <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                   <mat-cell *matCellDef="let row">
