complete all component except queue , delete and upload

--- a/panel/src/app/did/add-did/add-did.component.html
+++ b/panel/src/app/did/add-did/add-did.component.html
@@ -14,7 +14,7 @@
                   </div>
                   <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Enter ID Supplier" [(ngModel)]="cdata.idsupplier" type="number"   name="idsupplier">
+                        <input matInput placeholder="Enter Supplier id" [(ngModel)]="cdata.idsupplier" type="number"   name="idsupplier">
                       </mat-form-field>
                   </div>
                   
