--- a/panel/src/app/extension/listextension/listextension.component.html
+++ b/panel/src/app/extension/listextension/listextension.component.html
@@ -18,7 +18,7 @@
                 </ng-container>
    
                 <ng-container matColumnDef="secret">
-                  <mat-header-cell *matHeaderCellDef> Secret </mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef> Password </mat-header-cell>
                   <mat-cell *matCellDef="let element"> {{element.secret}} </mat-cell>
                 </ng-container>
   
