--- a/panel/src/app/extension/editextension/editextension.component.html
+++ b/panel/src/app/extension/editextension/editextension.component.html
@@ -14,7 +14,7 @@
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
                         <mat-form-field>
-                            <input matInput placeholder="Enter Password" [(ngModel)]="cdata.password"  id="password" name="password">
+                            <input matInput placeholder="Enter Password" [(ngModel)]="cdata.secret"  id="password" name="password">
                         </mat-form-field>
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
