complete all module and component except queue and report

--- a/panel/src/app/did/upload-did/upload-did.component.html
+++ b/panel/src/app/did/upload-did/upload-did.component.html
@@ -17,6 +17,8 @@
                         <input matInput placeholder="Enter Supplier id" [(ngModel)]="cdata.idsupplier" type="number"   name="idsupplier">
                       </mat-form-field>
                   </div>
+
+                  <input id="filename" name="filename" type="file" />
                   
                   <div fxFlex.gt-sm="100" fxFlex="100">
                     <button mat-raised-button color="primary" type="submit">Submit</button>
