--- a/panel/src/app/message/addmessage/addmessage.component.html
+++ b/panel/src/app/message/addmessage/addmessage.component.html
@@ -17,11 +17,12 @@
                             <input matInput type="file" placeholder="Choose a file" [(ngModel)]="cdata.filename" name="filename">
                         </mat-form-field>
                     </div>-->
-                     <div fxFlex.gt-md="100" fxFlex="100">
+                    <!-- <div fxFlex.gt-md="100" fxFlex="100">
                         <mat-form-field>
                           <input matInput type="text" placeholder="Enter file name" [(ngModel)]="cdata.filename" name="filename">
                         </mat-form-field>
-                      </div>
+                      </div>-->
+                      <input id="filename" name="filename" type="file" />
                     
                     <div fxFlex.gt-sm="100" fxFlex="100">
                       <button mat-raised-button color="primary" type="submit">Submit</button>
