--- a/panel/src/app/extension/addextension/addextension.component.html
+++ b/panel/src/app/extension/addextension/addextension.component.html
@@ -14,7 +14,7 @@
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
                         <mat-form-field>
-                            <input matInput placeholder="Enter Password" [(ngModel)]="cdata.secret"  id="password" name="password">
+                            <input matInput placeholder="Enter Password" [(ngModel)]="cdata.secret"  id="secret" name="secret">
                         </mat-form-field>
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
@@ -24,7 +24,7 @@
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
                       <mat-form-field>
-                        <input matInput placeholder="Enter Extension" [(ngModel)]="cdata.extension" id="extension"  name="extension">
+                        <input matInput placeholder="Enter Extension" [(ngModel)]="cdata.exten" id="exten"  name="exten">
                       </mat-form-field>
                     </div>
                     <div fxFlex.gt-sm="100" fxFlex="100">
