--- a/panel/src/app/extension/listextension/listextension.component.html
+++ b/panel/src/app/extension/listextension/listextension.component.html
@@ -48,7 +48,7 @@
                   <mat-cell *matCellDef="let row">
                      
                       <button mat-raised-button color="primary" (click)="Edit(row)">Edit</button>
-                      <button mat-raised-button color="primary" (click)="Delete(row)">Delete</button>
+                      <button mat-raised-button color="primary" (click)="Delete(row,  row.id)">Delete</button>
                   </mat-cell>
                 </ng-container> 
   
