--- a/panel/src/app/message/listmessage/listmessage.component.html
+++ b/panel/src/app/message/listmessage/listmessage.component.html
@@ -29,7 +29,7 @@
                 <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                 <mat-cell *matCellDef="let row">
                     <button mat-raised-button color="primary" (click)="Edit(row)">Edit</button>
-                    <button mat-raised-button color="primary" (click)="Delete(row)">Delete</button>
+                    <button mat-raised-button color="primary" (click)="Delete(row,  row.id)">Delete</button>
                 </mat-cell>
               </ng-container> 
 
